[package]
name = "ssam-tokio"
version = "0.1.1"
edition = "2018"

[dependencies]
futures = "0.3.28"
ssam = { path = "../ssam", version = "0.1.1" }
tokio = { version = "1.27.0", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["fs", "io-util", "macros", "rt"] }
