[package]
name = "ssam-tokio"
version = "0.1.2"
edition = "2018"

[dependencies]
futures = "0.3.30"
ssam = { path = "../ssam", version = "0.1.2" }
tokio = { version = "1.40.0", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "rt"] }
