[package]
name = "ssam-tokio"
version = "0.1.4"
edition = "2018"

[dependencies]
futures = "0.3.31"
ssam = { path = "../ssam", version = "0.1.3" }
tokio = { version = "1.44.2", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["fs", "io-util", "macros", "rt"] }
